@@ -7,6 +7,7 @@ Git 1.2.x
 BACKEND
 	Fixed: Could not remove service (wrong return value)
 	Fixed: Missing variable in sprintf statement (iMSCP::Dir)
+	Fixed: Optionnal options must be passed-in to onLoadTemplate listeners (httpd server impls.)
 
 CONFIG
 	Removed: ProxyErrorOverride parameter which was introduced in version 1.2.10 (Unexpected 503 errors +++)
